@@ -7,6 +7,7 @@
   <author role="MTP DAP">Patrick van Staveren</author>
   <author role="Audioscrobbler">Chris Toshok</author>
   <author role="Podcasting">Mike Urbanski</author>
+  <author role="Managed DBus">Alp Toker</author>
   <contributor>Dan Winship</contributor>
   <contributor>Hans Petter Jansson</contributor>
   <contributor>Chris Lahey</contributor>
