@@ -1,3 +1,8 @@
+2006-09-25  Aaron Bockover  <abock@gnome.org>
+
+	* src/Banshee.Base/NetworkDetect.cs: 
+	* src/Banshee.Base/NetworkManager/Manager.cs: Added signal support
+
 2006-09-25  James Willcox  <snorp@snorp.net>
 
 	* src/Banshee.Plugins/Daap/DaapCore.cs: oops, be more careful
